# fire-EBMLem

./: Cargo.toml  LICENSE  ebml-specification.md
crates/base_template/: Cargo.toml
crates/base_template/proptest-regressions/: stream.txt
crates/base_template/src/: element_defs.rs  lib.rs
crates/base_template/src/base/: parser.rs  stream.rs
crates/example/: Cargo.toml  eg_schema.xml
crates/example/src/base/: parser.rs
crates/example/src/core/: element_defs.rs  mod.rs  parser.rs
crates/example/tests/: integration.rs
crates/example_generated/: Cargo.toml  build.rs  eg_schema.xml
crates/example_generated/parser/src/base/: element_defs.rs  mod.rs
crates/example_generated/parser/src/core/: element_defs.rs  parser.rs
crates/example_generated/tests/: integration.rs
proptest-regressions/: stream.txt
src/: doc_iter.rs  eg_schema.rs  element_defs.rs  lib.rs  parse.rs  parser.rs  parser_gen.rs  schema_parser.rs  schema_types.rs  serde_schema.rs  stream.rs  trie.rs  write.rs
src/eg_codegen/: element_defs.rs  integration.rs  parser.rs
