[package]
name = "iron-ebmlem-base"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
nom = "6.1.0"
enum_dispatch = "0.3.8"
lexical-core = ">0.7.4"

[dev-dependencies]
rstest = "0.12.0"
proptest = "0.10.1"
